@@ -6,14 +6,21 @@
   <metal:slot fill-slot="head_slot">
     <title>Reorder resources</title>
   </metal:slot>
-  <metal:slot fill-slot="css_slot">
+
+  <metal:block fill-slot="top_slot" tal:define="dummy python:request.set('disable_border',1)" />
+
+  <body>
+    <div metal:fill-slot="prefs_configlet_content" >
+
+
+
   <style>
     .reorder {
       list-style-image:none;
       margin:0;
     }
     .list-item {
-      width:320px;
+      width:380px;
       list-style-type:none;
       padding:3px;
       margin:1px;
@@ -38,20 +45,13 @@
       list-style-image:none;
     }
 	#portal-column-content {
-		width:830px;
+		width:1010px;
 	}
-  </style>
-  </metal:slot>
-  <metal:slot fill-slot="javascript_head_slot">
-    <script type="text/javascript"
-            tal:attributes="src string:${portal_url}/++resource++jquery.ui-1.7.js"></script>
+
+</style>
+
+
     <script type="text/javascript" tal:attributes="src string:$portal_url/reorder_resources.js" ></script>
-  </metal:slot>
-
-  <metal:block fill-slot="top_slot" tal:define="dummy python:request.set('disable_border',1)" />
-
-  <body>
-    <div metal:fill-slot="prefs_configlet_content" >
 
       <ul class="contentViews">
         <li class="selected" tal:attributes="class python: ('css' in request.URL) and 'selected' or ''">
@@ -66,7 +66,7 @@
       <p>On the left side you have a list resources. Drag from the handle icon to reorder. After reordering, you need to use the Save button at the bottom of the list. On the right side you can see how the resources have been composed. Notice: this is not a preview. Hitting Save will generate new merged resources.
 </p>
 
-      <div style="width:320px; float:left">
+      <div style="width:380px; float:left">
       <form method="POST" id="reorder_form" action="" tal:attributes="action request/URL">
         <textarea name="resources" tal:content="python: '\n'.join(view.resources)" style="display:none"></textarea>
         <p>
@@ -85,6 +85,11 @@
               <tal:block tal:condition="entry/getExpression | nothing">
                 - <span tal:replace="entry/getExpression" />
               </tal:block>
+
+              <tal:block tal:condition="entry/getAuthenticated | nothing">
+                - (restricted to authenticated)
+              </tal:block>
+
             </div>
             <ul tal:define="scripts context/portal_javascripts/concatenatedresources">
               <tal:scripts tal:define="portal python:context.portal_url.getPortalObject();"
